--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="#" class="btn">Order now</a>
       </div>
       <div class="pizza-image">
-        <img src="../images01/home-img.png" alt="" />
+        <img src="./images01/home-img.png" alt="" />
       </div>
     </section>
     <!-- speciality section -->
@@ -54,7 +54,7 @@
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-1.png" alt="" />
+              <img src="./images01/s-1.png" alt="" />
               <h3>tasty burger</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -64,13 +64,13 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-1.jpg" alt="" />
+            <img src="./images01/s-img-1.jpg" alt="" />
           </div>
         </div>
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-2.png" alt="" />
+              <img src="./images01/s-2.png" alt="" />
               <h3>tasty pizza</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -80,13 +80,13 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-2.jpg" alt="" />
+            <img src="./images01/s-img-2.jpg" alt="" />
           </div>
         </div>
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-3.png" alt="" />
+              <img src="./images01/s-3.png" alt="" />
               <h3>cold ice-cream</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -96,13 +96,13 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-3.jpg" alt="" />
+            <img src="./images01/s-img-3.jpg" alt="" />
           </div>
         </div>
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-4.png" alt="" />
+              <img src="./images01/s-4.png" alt="" />
               <h3>cold drinks</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -112,13 +112,13 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-4.jpg" alt="" />
+            <img src="./images01/s-img-4.jpg" alt="" />
           </div>
         </div>
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-5.png" alt="" />
+              <img src="./images01/s-5.png" alt="" />
               <h3>tasty sweets</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -128,13 +128,13 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-5.jpg" alt="" />
+            <img src="./images01/s-img-5.jpg" alt="" />
           </div>
         </div>
         <div class="box">
           <div class="front">
             <div class="content">
-              <img src="../images01/s-6.png" alt="" />
+              <img src="./images01/s-6.png" alt="" />
               <h3>healthy breakfast</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="back">
-            <img src="../images01/s-img-6.jpg" alt="" />
+            <img src="./images01/s-img-6.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
       <div class="box-container">
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-1.jpg" alt="" />
+          <img src="./images01/p-1.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -168,7 +168,7 @@
         </div>
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-2.jpg" alt="" />
+          <img src="./images01/p-2.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -179,7 +179,7 @@
         </div>
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-3.jpg" alt="" />
+          <img src="./images01/p-3.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -190,7 +190,7 @@
         </div>
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-4.jpg" alt="" />
+          <img src="./images01/p-4.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -201,7 +201,7 @@
         </div>
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-5.jpg" alt="" />
+          <img src="./images01/p-5.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -212,7 +212,7 @@
         </div>
         <div class="box">
           <span class="price">$5 - $20</span>
-          <img src="../images01/p-6.jpg" alt="" />
+          <img src="./images01/p-6.jpg" alt="" />
           <h3>tasty burger</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -231,19 +231,19 @@
       <h1 class="heading">how it <span>works</span></h1>
       <section class="steps">
         <div class="box">
-          <img src="../images01/step-1.jpg" alt="" />
+          <img src="./images01/step-1.jpg" alt="" />
           <h3>choose your favorite food</h3>
         </div>
         <div class="box">
-          <img src="../images01/step-2.jpg" alt="" />
+          <img src="./images01/step-2.jpg" alt="" />
           <h3>free and fast delivery</h3>
         </div>
         <div class="box">
-          <img src="../images01/step-3.jpg" alt="" />
+          <img src="./images01/step-3.jpg" alt="" />
           <h3>easy payments</h3>
         </div>
         <div class="box">
-          <img src="../images01/step-4.jpg" alt="" />
+          <img src="./images01/step-4.jpg" alt="" />
           <h3>enjoy your food!!</h3>
         </div>
       </section>
@@ -256,7 +256,7 @@
       <h1 class="heading">our food <span> gallery </span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="../images01/g-1.jpg" alt="" />
+          <img src="./images01/g-1.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -267,7 +267,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-2.jpg" alt="" />
+          <img src="./images01/g-2.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -278,7 +278,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-3.jpg" alt="" />
+          <img src="./images01/g-3.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -289,7 +289,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-4.jpg" alt="" />
+          <img src="./images01/g-4.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -300,7 +300,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-5.jpg" alt="" />
+          <img src="./images01/g-5.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -311,7 +311,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-6.jpg" alt="" />
+          <img src="./images01/g-6.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -322,7 +322,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-7.jpg" alt="" />
+          <img src="./images01/g-7.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -333,7 +333,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-8.jpg" alt="" />
+          <img src="./images01/g-8.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
@@ -344,7 +344,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="../images01/g-9.jpg" alt="" />
+          <img src="./images01/g-9.jpg" alt="" />
           <div class="content">
             <h3>tasty food</h3>
             <p>
